--- a/0.08_divs.html
+++ b/0.08_divs.html
@@ -26,7 +26,7 @@
 		proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
 	</div>
 
-	<div style="border: 1px solid black" style="background-color: gray" > 
+	<div style="border: 1px solid black" style="background-color: grey" > 
 			<h3> More info  </h3>
 			<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
@@ -36,6 +36,17 @@
 		proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
 
 	</div>
+
+	<section> 
+
+			<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.	 </p>
+			
+	</section>
 
 
 
