margins added and more CSS

--- a/HTMLbasic/0.09_forms.html
+++ b/HTMLbasic/0.09_forms.html
@@ -9,10 +9,12 @@
 <hr>
 
 <div>
- 		<h4>Order Name</h4> <input type="" name="info">
- 		<h4>Address </h4> <input type="" name="info">
+ 		<h4>Order Name</h4> <input type="" name="info" placeholder="name on card">
+ 		<h4>Address </h4> <input type="" name="info" placeholder="delivery Address">
 </div>
 
+
+<br>
 <hr>
 
  <form> 
